--- a/Kenny/Views/Shared/_Layout.cshtml
+++ b/Kenny/Views/Shared/_Layout.cshtml
@@ -4,6 +4,12 @@
 <head>
 	<link type="text/css" rel="stylesheet" href="~/Assets/css/bootstrap.css" />
 	<link type="text/css" rel="stylesheet" href="~/Assets/css/bootstrap-responsive.css" />
+	<style>
+		.navbar-inverse .navbar-inner {
+			background-color: #3C3C3C;
+			background-image: linear-gradient(to bottom, #3C3C3C, #3C3C3C);
+		}
+	</style>
 	@RenderSection("Scripts", false)
 	<meta name="viewport" content="width=device-width" />
 	<title>@ViewBag.Title</title>
