--- a/Kenny/Views/Account/Login.cshtml
+++ b/Kenny/Views/Account/Login.cshtml
@@ -31,8 +31,7 @@
 			@Html.ValidationMessageFor(m => m.Password)
 		</div>
 		<div class="editor-label">
-			@Html.CheckBoxFor(m => m.RememberMe)
-			@Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
+			<label class="checkbox" for="RememberMe">@Html.CheckBoxFor(m => m.RememberMe) Remember me?</label>
 		</div>
 		<div class="editor-field">
 			
