--- a/Kenny/Views/Shared/_Layout.cshtml
+++ b/Kenny/Views/Shared/_Layout.cshtml
@@ -10,6 +10,8 @@
 			background-image: linear-gradient(to bottom, #3C3C3C, #3C3C3C);
 		}
 	</style>
+	<script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
+	<script type="text/javascript" src="~/Assets/js/bootstrap.min.js"></script>
 	@RenderSection("Scripts", false)
 	<meta name="viewport" content="width=device-width" />
 	<title>@ViewBag.Title</title>
