No longer depending on Dropbox for Kenny image.

--- a/Kenny/Views/Home/Index.cshtml
+++ b/Kenny/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 <div id="hero">
 	<div class="wrap">
 		<div class="brand">
-			<img src="https://dl.dropboxusercontent.com/u/93604/img/kenny-loggins-ascii.png" class="kenny-logo" alt="Kenny logo">
+			<img src="~/Assets/img/kenny-loggins-ascii.png" class="kenny-logo" alt="Kenny logo">
 			<h1>Kenny</h1>
 		</div>
 		<h3 class="tagline"> &nbsp;finds logins.</h3>
